bindings/c/whiteout_mdx.h

typedef struct whiteout_MdxModel whiteout_MdxModel;
typedef struct whiteout_MdxParser whiteout_MdxParser;
typedef struct whiteout_MdxWriter whiteout_MdxWriter;
typedef struct whiteout_MdxTrackVector3f whiteout_MdxTrackVector3f;
typedef struct whiteout_MdxTrackQuaternion whiteout_MdxTrackQuaternion;
typedef struct whiteout_MdxTrackU32 whiteout_MdxTrackU32;
typedef struct whiteout_MdxTrackF32 whiteout_MdxTrackF32;
whiteout_MdxParser* whiteout_mdx_MdxParser_new_upgradeMode(int32_t upgradeMode);
void whiteout_mdx_MdxParser_delete(whiteout_MdxParser* self);
/* Parse an MDX file from disk */
/*  */
/* The format is detected from the file extension: `.mdl` for text MDL format, `.mdx` (or any other extension) for binary MDX format. */
/*  */
/* @param filePath Path to the MDX/MDL file @return Parsed MDX file data @throws std::runtime_error If file cannot be opened or parsing fails in strict mode */
struct whiteout_MdxModel* whiteout_mdx_MdxParser_parse(whiteout_MdxParser* self, const char* filePath);
/* Parse an MDX/MDL file from memory buffer @param buffer Memory buffer containing MDX/MDL data @param format Source format (MDX binary or MDL text) @return Parsed MDX file data @throws std::runtime_error If parsing fails in strict mode */
struct whiteout_MdxModel* whiteout_mdx_MdxParser_parse_buffer_format(whiteout_MdxParser* self, const uint8_t* buffer, size_t buffer_size, int32_t format);
/* Check if parsing encountered any issues @return True if there were warnings or recoverable errors */
int32_t whiteout_mdx_MdxParser_hasIssues(const whiteout_MdxParser* self);
/* Get list of issues encountered during parsing @return Vector of issue description strings */
size_t whiteout_mdx_MdxParser_getIssues_count(const whiteout_MdxParser* self);
whiteout_CString whiteout_mdx_MdxParser_getIssues_at(const whiteout_MdxParser* self, size_t index);
/* ── MdxWriter ─────────────────────────────────────────────── */

/* Writer for MDX/MDL model files */
/*  */
/* The Writer takes a Model structure and writes it to disk in binary MDX format or text MDL format. It automatically handles chunk serialization and size calculation for MDX, and text formatting for MDL. */
/*  */
/* The format is selected either by file extension (.mdl → text, .mdx → binary) or by an explicit MDLXFormat parameter. */
/*  */
/* Uses the PImpl (Pointer to Implementation) idiom to hide implementation details. */
whiteout_MdxWriter* whiteout_mdx_MdxWriter_new(void);
void whiteout_mdx_MdxWriter_delete(whiteout_MdxWriter* self);
/* Write a model file to disk */
/*  */
/* The format is detected from the file extension: `.mdl` for text MDL format, `.mdx` (or any other extension) for binary MDX format. */
/*  */
/* @param filePath  Path where the file should be written @param mdlx      Model data to write @param mdlFormat MDL text dialect (only used when writing .mdl); defaults to WarcraftIII (engine-faithful). @throws std::runtime_error If file cannot be created or written */
void whiteout_mdx_MdxWriter_write(whiteout_MdxWriter* self, const char* filePath, struct whiteout_MdxModel* mdlx, int32_t mdlFormat);
/* Write a model to a byte buffer @param mdx       Model data to write @param format    Output format (MDX binary or MDL text, defaults to MDX) @param mdlFormat MDL text dialect (only used when format == MDL); defaults to WarcraftIII (engine-faithful). @return Vector containing the binary MDX data or UTF-8 MDL text */
whiteout_Bytes whiteout_mdx_MdxWriter_write_mdx_format_mdlFormat(whiteout_MdxWriter* self, struct whiteout_MdxModel* mdx, int32_t format, int32_t mdlFormat);
/* ── MdxTrackVector3f ─────────────────────────────────────────────── */

/* Generic animation track with keyframe data */
/*  */
/* Tracks store animation data as a series of keyframes. The interpolation type determines how values between keyframes are calculated. */
/*  */
/* @tparam T The value type (f32, Vector3f, Vector4f, u32, etc.) */
whiteout_MdxTrackVector3f* whiteout_mdx_MdxTrackVector3f_new(void);
void whiteout_mdx_MdxTrackVector3f_delete(whiteout_MdxTrackVector3f* self);
/* Whether this track contains animation data */
int32_t whiteout_mdx_MdxTrackVector3f_get_isUsed(const whiteout_MdxTrackVector3f* self);
void whiteout_mdx_MdxTrackVector3f_set_isUsed(whiteout_MdxTrackVector3f* self, int32_t value);
/* Interpolation type */
int32_t whiteout_mdx_MdxTrackVector3f_get_interpolationType(const whiteout_MdxTrackVector3f* self);
void whiteout_mdx_MdxTrackVector3f_set_interpolationType(whiteout_MdxTrackVector3f* self, int32_t value);
/* Global sequence ID if applicable */
uint32_t whiteout_mdx_MdxTrackVector3f_get_globalSequenceId(const whiteout_MdxTrackVector3f* self);
void whiteout_mdx_MdxTrackVector3f_set_globalSequenceId(whiteout_MdxTrackVector3f* self, uint32_t value);
/* Number of keyframes */
uint64_t whiteout_mdx_MdxTrackVector3f_get_keyCount(const whiteout_MdxTrackVector3f* self);
void whiteout_mdx_MdxTrackVector3f_set_keyCount(whiteout_MdxTrackVector3f* self, uint64_t value);
/* Raw keyframe data */
size_t whiteout_mdx_MdxTrackVector3f_get_keys_count(const whiteout_MdxTrackVector3f* self);
const float* whiteout_mdx_MdxTrackVector3f_get_keys_data(const whiteout_MdxTrackVector3f* self);
/* ── MdxTrackQuaternion ─────────────────────────────────────────────── */

/* Generic animation track with keyframe data */
/*  */
/* Tracks store animation data as a series of keyframes. The interpolation type determines how values between keyframes are calculated. */
/*  */
/* @tparam T The value type (f32, Vector3f, Vector4f, u32, etc.) */
whiteout_MdxTrackQuaternion* whiteout_mdx_MdxTrackQuaternion_new(void);
void whiteout_mdx_MdxTrackQuaternion_delete(whiteout_MdxTrackQuaternion* self);
/* Whether this track contains animation data */
int32_t whiteout_mdx_MdxTrackQuaternion_get_isUsed(const whiteout_MdxTrackQuaternion* self);
void whiteout_mdx_MdxTrackQuaternion_set_isUsed(whiteout_MdxTrackQuaternion* self, int32_t value);
/* Interpolation type */
int32_t whiteout_mdx_MdxTrackQuaternion_get_interpolationType(const whiteout_MdxTrackQuaternion* self);
void whiteout_mdx_MdxTrackQuaternion_set_interpolationType(whiteout_MdxTrackQuaternion* self, int32_t value);
/* Global sequence ID if applicable */
uint32_t whiteout_mdx_MdxTrackQuaternion_get_globalSequenceId(const whiteout_MdxTrackQuaternion* self);
void whiteout_mdx_MdxTrackQuaternion_set_globalSequenceId(whiteout_MdxTrackQuaternion* self, uint32_t value);
/* Number of keyframes */
uint64_t whiteout_mdx_MdxTrackQuaternion_get_keyCount(const whiteout_MdxTrackQuaternion* self);
void whiteout_mdx_MdxTrackQuaternion_set_keyCount(whiteout_MdxTrackQuaternion* self, uint64_t value);
/* Raw keyframe data */
size_t whiteout_mdx_MdxTrackQuaternion_get_keys_count(const whiteout_MdxTrackQuaternion* self);
const float* whiteout_mdx_MdxTrackQuaternion_get_keys_data(const whiteout_MdxTrackQuaternion* self);
/* ── MdxTrackU32 ─────────────────────────────────────────────── */

/* Generic animation track with keyframe data */
/*  */
/* Tracks store animation data as a series of keyframes. The interpolation type determines how values between keyframes are calculated. */
/*  */
/* @tparam T The value type (f32, Vector3f, Vector4f, u32, etc.) */
whiteout_MdxTrackU32* whiteout_mdx_MdxTrackU32_new(void);
void whiteout_mdx_MdxTrackU32_delete(whiteout_MdxTrackU32* self);
/* Whether this track contains animation data */
int32_t whiteout_mdx_MdxTrackU32_get_isUsed(const whiteout_MdxTrackU32* self);
void whiteout_mdx_MdxTrackU32_set_isUsed(whiteout_MdxTrackU32* self, int32_t value);
/* Interpolation type */
int32_t whiteout_mdx_MdxTrackU32_get_interpolationType(const whiteout_MdxTrackU32* self);
void whiteout_mdx_MdxTrackU32_set_interpolationType(whiteout_MdxTrackU32* self, int32_t value);
/* Global sequence ID if applicable */
uint32_t whiteout_mdx_MdxTrackU32_get_globalSequenceId(const whiteout_MdxTrackU32* self);
void whiteout_mdx_MdxTrackU32_set_globalSequenceId(whiteout_MdxTrackU32* self, uint32_t value);
/* Number of keyframes */
uint64_t whiteout_mdx_MdxTrackU32_get_keyCount(const whiteout_MdxTrackU32* self);
void whiteout_mdx_MdxTrackU32_set_keyCount(whiteout_MdxTrackU32* self, uint64_t value);
/* ── MdxTrackF32 ─────────────────────────────────────────────── */

/* Generic animation track with keyframe data */
/*  */
/* Tracks store animation data as a series of keyframes. The interpolation type determines how values between keyframes are calculated. */
/*  */
/* @tparam T The value type (f32, Vector3f, Vector4f, u32, etc.) */
whiteout_MdxTrackF32* whiteout_mdx_MdxTrackF32_new(void);
void whiteout_mdx_MdxTrackF32_delete(whiteout_MdxTrackF32* self);
/* Whether this track contains animation data */
int32_t whiteout_mdx_MdxTrackF32_get_isUsed(const whiteout_MdxTrackF32* self);
void whiteout_mdx_MdxTrackF32_set_isUsed(whiteout_MdxTrackF32* self, int32_t value);
/* Interpolation type */
int32_t whiteout_mdx_MdxTrackF32_get_interpolationType(const whiteout_MdxTrackF32* self);
void whiteout_mdx_MdxTrackF32_set_interpolationType(whiteout_MdxTrackF32* self, int32_t value);
/* Global sequence ID if applicable */
uint32_t whiteout_mdx_MdxTrackF32_get_globalSequenceId(const whiteout_MdxTrackF32* self);
void whiteout_mdx_MdxTrackF32_set_globalSequenceId(whiteout_MdxTrackF32* self, uint32_t value);
/* Number of keyframes */
uint64_t whiteout_mdx_MdxTrackF32_get_keyCount(const whiteout_MdxTrackF32* self);
void whiteout_mdx_MdxTrackF32_set_keyCount(whiteout_MdxTrackF32* self, uint64_t value);