bindings/csharp/Whiteout/Mdx/NativeMethods.Mdx.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxParser_new_upgradeMode(int upgradeMode);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParser_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxParser_parse(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string filePath);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxParser_parse_buffer_format(IntPtr self, ReadOnlySpan<byte> buffer, nuint buffer_size, int format);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_mdx_MdxParser_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxParser_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxParser_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxWriter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxWriter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxWriter_write(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string filePath, IntPtr mdlx, int mdlFormat);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_mdx_MdxWriter_write_mdx_format_mdlFormat(IntPtr self, IntPtr mdx, int format, int mdlFormat);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxTrackVector3f_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackVector3f_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxTrackVector3f_get_isUsed(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackVector3f_set_isUsed(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxTrackVector3f_get_interpolationType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackVector3f_set_interpolationType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxTrackVector3f_get_globalSequenceId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackVector3f_set_globalSequenceId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_mdx_MdxTrackVector3f_get_keyCount(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackVector3f_set_keyCount(IntPtr self, ulong value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxTrackVector3f_get_keys_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxTrackVector3f_get_keys_data(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxTrackQuaternion_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackQuaternion_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxTrackQuaternion_get_isUsed(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackQuaternion_set_isUsed(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxTrackQuaternion_get_interpolationType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackQuaternion_set_interpolationType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxTrackQuaternion_get_globalSequenceId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackQuaternion_set_globalSequenceId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_mdx_MdxTrackQuaternion_get_keyCount(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackQuaternion_set_keyCount(IntPtr self, ulong value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxTrackQuaternion_get_keys_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxTrackQuaternion_get_keys_data(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxTrackU32_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackU32_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxTrackU32_get_isUsed(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackU32_set_isUsed(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxTrackU32_get_interpolationType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackU32_set_interpolationType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxTrackU32_get_globalSequenceId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackU32_set_globalSequenceId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_mdx_MdxTrackU32_get_keyCount(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackU32_set_keyCount(IntPtr self, ulong value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxTrackF32_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackF32_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxTrackF32_get_isUsed(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackF32_set_isUsed(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxTrackF32_get_interpolationType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackF32_set_interpolationType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxTrackF32_get_globalSequenceId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackF32_set_globalSequenceId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_mdx_MdxTrackF32_get_keyCount(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTrackF32_set_keyCount(IntPtr self, ulong value);

}
